--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "aos": "^2.3.4",
     "framer-motion": "^12.4.2",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
